--- a/languages.toml
+++ b/languages.toml
@@ -15,6 +15,8 @@ formatter = { command = 'prettier', args = ["--parser", "html"] }
 [[language]]
 name = "json"
 formatter = { command = 'prettier', args = ["--parser", "json"] }
+auto-format = true
+config = { "provideFormatter" = true, "json" = { "keepLines" = { "enable" = true } } }
 
 [[language]]
 name = "css"
@@ -24,3 +26,7 @@ formatter = { command = 'prettier', args = ["--parser", "css"] }
 name = "javascript"
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 auto-format = true
+
+[[language]]
+name = "markdown"
+language-server = {command = "ltex-ls", args = ["/opt/homebrew/bin/marksman"]}
