--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ bufferline = "multiple"
 rulers = [100]
 
 [keys.normal]
-esc = ["collapse_selection", "keep_primary_selection"]
+esc = ["collapse_selection"]
 
 [keys.normal.space]
 # キーの押し間違えが怖い
